Update the nav item

--- a/Tour-of-heroes/src/app/app.component.html
+++ b/Tour-of-heroes/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav>
   <ul>
     <li>Home</li>
-    <li>Home</li>
-    <li>Home</li>
+    <li>About</li>
+    <li>Contact</li>
     <li>Home</li>
   </ul>
 </nav>
